Bug 511594 - [Android] the Edit Shapes Tool doesn't work properly while touch painting
Summary: [Android] the Edit Shapes Tool doesn't work properly while touch painting
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2025-11-04 00:14 UTC by Door1
Modified: 2025-11-04 13:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2025-11-04 00:14:24 UTC
SUMMARY
the Edit Shapes Tool doesn't work properly while touch painting

STEPS TO REPRODUCE
Using your finger to touch the screen:

1.  Create a vector layer, and with the Bezier Curve Tool, make a shape comprised of several points
2.  Switch to the Edit Shapes Tool
3. Try to move the individual points of the shape around with the finger

OBSERVED RESULT
You can't move the individual points around.

EXPECTED RESULT
You should be able to move the individual points around like you would when using a mouse.

SOFTWARE/OS VERSIONS
Android 14
Krita 5.3 nightly
arm64
git eb4d34a / eb4d34a8 (Oct. 29, 2025)
Comment 1 dra.w.p.il.e+bugskde 2025-11-04 01:33:05 UTC
Happens on both 5.2 and 5.3. I suspect it's the usual case of the tool relying on previous hover events.
Comment 2 Dmitry Kazakov 2025-11-04 13:06:57 UTC
Git commit 5ffc6a2492511df20828f15cda07a8eda00c46ed by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 04/11/2025 at 12:58.
Pushed by hartenfels into branch 'master'.

Make edit shapes tool work with touch drawing

Via the usual fix of conjuring an artificial mouse move when a touch
press comes in, since the tool expects it that way.

M  +7    -0    libs/flake/tools/KoPathTool.cpp

https://invent.kde.org/graphics/krita/-/commit/5ffc6a2492511df20828f15cda07a8eda00c46ed