Make edit shapes tool work with touch drawing

Via the usual fix of conjuring an artificial mouse move when a touch
press comes in, since the tool expects it that way.

BUG:511594